# llm-from-scratch

./: .gitignore  README.md  flake.nix  pyproject.toml
notebooks/: scratchpad.ipynb
src/llm/: entrypoint.py
