[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm"
dynamic = ["version"]
description = 'Making an LLM from scratch'
readme = "README.md"
requires-python = ">=3.8"
keywords = []
authors = [
  { name = "asungy", email = "62207329+asungy@users.noreply.github.com" },
  { name = "mjsigg", email = "" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "jupyter"
]

[project.scripts]
llm = "llm.entrypoint:main"

[tool.hatch.version]
path = "src/llm/__about__.py"
